--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
-html,
-body {
-  padding: 0;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
+
+html, body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  overflow-x: hidden;
+  height: 100%;
+  background: black; 
 }
 
 a {
@@ -15,12 +20,14 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+main {
+  flex-grow: 1;
+}
+
+footer {
+  background-color: #2ecc71;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  width: 100%;
 }
