--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -74,13 +74,20 @@
 }
 
 .heroText .btn {
-  display: inline-block; 
+  display: flex; 
+  align-items: center;
   background-color: #127234;
   color: white;
   padding: 10px 15px; 
   border-radius: 20px;
   text-decoration: none;
   font-weight: bold;
+  width: 275px;
+  height: 45px;
+}
+
+.heroText .arrow {
+  margin-left: 25px; /* Espaço entre o texto e a seta */
 }
 
 .logo2 {
@@ -102,14 +109,14 @@
 }
 
 .socialIcons {
-  position: fixed;
   top: 50%;
   right: 30px;
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
   z-index: 100;
+  margin-right: 50px;
 }
 
 .socialIcons a {
