--- a/styles/sobre.css
+++ b/styles/sobre.css
@@ -1,5 +1,5 @@
 
 body {
-  background: url('/imagens/fundo2.png') no-repeat center center fixed !important;
+  background-color: #004809;
   background-size: cover !important;
 }
