--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,18 +27,19 @@
 }
 
 .nav ul li a {
+  display: inline-block;
   text-decoration: none;
   color: white;
   font-size: 18px;
   font-weight: 500;
   padding: 10px 15px;
-  transition: color 0.3s ease;
+  transition: color 0.3s ease, transform 0.3s ease;
 }
 
 .nav ul li a:hover {
   color: #ffcc00;
+  transform: scale(1.2);
 }
-
 
 .hero {
   position: relative;
@@ -50,6 +51,17 @@
   justify-content: flex-start;
   color: white;
   padding-left: 10%;
+}
+
+.logo2 {
+  width: 400px;
+  height: 100px;
+  transition: transform 0.3s ease;
+  transform-origin: center;
+}
+
+.logo2:hover {
+  transform: scale(1.25);
 }
 
 .overlay {
@@ -84,10 +96,17 @@
   font-weight: bold;
   width: 275px;
   height: 45px;
+  transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease; /* Adiciona transição para a transformação */
+}
+
+.btn:hover {
+  background: #E8F5E9;
+  color: #127234;
+  transform: scale(1.1); /* Aumenta o tamanho do botão ao passar o mouse */
 }
 
 .heroText .arrow {
-  margin-left: 25px; /* Espaço entre o texto e a seta */
+  margin-left: 25px; 
 }
 
 .logo2 {
@@ -97,24 +116,18 @@
   margin-bottom: 50px;
 }
 
-.btn:hover {
-  background: #E8F5E9;
-  color:#127234;
-}
-
 .description {
   font-size: 16px;
   line-height: 1.6;
   margin-top: 20px;
 }
-
 .socialIcons {
   top: 50%;
   right: 30px;
-  transform: translateY(-50%);
+  transform: translateY(-60%);
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 40px;
   z-index: 100;
   margin-right: 50px;
 }
@@ -122,23 +135,22 @@
 .socialIcons a {
   color: #127234;
   font-size: 20px;
-  background: #D9D9D9; /* Fundo escuro transparente */
-  padding: 12px; /* Tamanho interno do botão */
-  border-radius: 50%; /* Garante que fique redondo */
+  background: #D9D9D9; 
+  padding: 12px;
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 35px; /* Define um tamanho fixo para manter o formato redondo */
-  height: 35px;
-  transition: background 0.3s ease, color 0.3s ease;
+  width: 34px;
+  height: 34px;
+  transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
 .socialIcons a:hover {
-  background: #127234; /* Muda o fundo ao passar o mouse */
+  background: #127234;
   color: #D9D9D9;
+  transform: scale(1.3);
 }
-
-
 
 @media (max-width: 768px) {
   .header {
@@ -156,9 +168,7 @@
     text-align: center;
   }
   
-  .logo2 {
-    margin: 0 auto 30px;
-  }
+
   
   .socialIcons {
     right: 15px;
