--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -79,14 +79,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 35px;
-  height: 35px;
-  transition: background 0.3s ease, color 0.3s ease;
+  width: 34px;
+  height: 34px;
+  transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
 .footersocial a:hover {
   background: #127234;
   color: #d9d9d9;
+  transform: scale(1.3);
 }
 
 .footerline {
