--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -96,13 +96,13 @@
   font-weight: bold;
   width: 275px;
   height: 45px;
-  transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease; /* Adiciona transição para a transformação */
+  transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
 .btn:hover {
   background: #E8F5E9;
   color: #127234;
-  transform: scale(1.1); /* Aumenta o tamanho do botão ao passar o mouse */
+  transform: scale(1.1);
 }
 
 .heroText .arrow {
