--- a/styles/sobre.css
+++ b/styles/sobre.css
@@ -1,4 +1,5 @@
 
 body {
-  background: transparent;
+  background: url('/imagens/fundo2.png') no-repeat center center fixed !important;
+  background-size: cover !important;
 }
