--- a/styles/Sobre.module.css
+++ b/styles/Sobre.module.css
@@ -12,7 +12,7 @@
   align-items: center;
   padding: 50px;
   background: rgba(40, 80, 50, 0.8);
-  margin: 20px;
+  margin: 90px 20px 20px 20px;
   border-radius: 8px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
@@ -63,6 +63,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out;
   color: white;
+  
 }
 
 .bloco:hover {
@@ -84,9 +85,36 @@
   margin-left: 15%; 
 }
 
-.bloco h2 {
+
+.tituloComIcone{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
   margin-bottom: 15px;
+}
+
+.iconeBloco{
+ width: 50px;
+ height: 50px;
+ position: relative;
+ top: 6.4px;
+ align-self: flex-start;
+ margin-top: 3px;
+}
+
+.bloco{
+  text-align: center;
+  padding: 20px;
+}
+
+
+.bloco h2 {
+  margin-bottom: 0;
+  font-size: 1.5rem;
   color: #ffffff;
+  line-height: 1.3;
+  display: inline-block;
 }
 
 
@@ -137,13 +165,6 @@
 }
 
 
-.cardDireita {
-  flex: 1;
-  padding: 20px;
-  background: rgba(40, 80, 50, 0.8); 
-  color: white; 
-}
-
 .cardDireita h3 {
   margin: 0;
   font-size: 1.2rem;
@@ -162,22 +183,54 @@
   color: white;
 }
 
-.linkedin {
+
+.linkedinBtn {
   position: absolute;
   bottom: 15px;
-  right: 15px;
+  left: 15px;
+  width: 28px;
+  height: 28px;
+  background-color: rgba(255, 255, 255, 0.749); 
+  border-radius: 6px;
+  border: none;
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
 }
 
-.linkedin img {
-  width: 20px;
-  height: 20px;
-  opacity: 0.8;
-  transition: opacity 0.3s;
+.linkedinBtn:hover {
+  background-color: rgba(234, 214, 34, 0.866); 
+  transform: scale(1.1);
 }
 
-.linkedin:hover img {
-  opacity: 1;
+.linkedinIcon {
+  width: 24px;
+  height: 24px;
+  object-fit: contain;
+  filter: brightness(0) saturate(100%) invert(38%) sepia(70%) saturate(900%) hue-rotate(72deg) brightness(88%) contrast(95%); 
+  transition: all 0.3s ease;
 }
+
+.linkedinBtn:hover .linkedinIcon {
+  filter: brightness(1000%) saturate(0%);
+}
+
+.cardDireita {
+  flex: 1;
+  padding: 20px;
+  background: rgba(40, 80, 50, 0.8);
+  color: white;
+  position: relative;
+}
+
+
+
+
+
+
+
 
 @media (max-width: 768px) {
   .membrosGrid {
