--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,7 +13,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url('/imagens/fundo.jpg') no-repeat center center/cover;
+  background: url('/imagens/fundo.png') no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: flex-start;
