--- a/styles/Sobre.module.css
+++ b/styles/Sobre.module.css
@@ -2,6 +2,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  margin-top: 50px;
 }
 
 
@@ -10,17 +11,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 50px;
-  background: rgba(40, 80, 50, 0.8);
-  margin: 90px 20px 20px 20px;
+  padding: 40px;
+  background: rgba(76, 175, 80, 0.1);
+  margin: 60px auto;
   border-radius: 8px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.2);
+  max-width: 2000px;
+  width: 90%;
 }
 
 .texto {
-  width: 50%;
+  width: 55%;
+  padding-right: 20px;
 }
 
 .texto h1 {
@@ -36,7 +40,7 @@
 }
 
 .imagemContainer {
-  width: 45%;
+  width: 40%;
 }
 
 .equipeImg {
@@ -44,6 +48,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   width: 100%;
   height: auto;
+  max-width: 600px; 
 }
 
 .blocos {
@@ -55,7 +60,7 @@
 }
 
 .bloco {
-  background: rgba(40, 80, 50, 0.8);
+  background: rgba(76, 175, 80, 0.3);
   padding: 20px;
   width: 80%;
   max-width: 600px;
@@ -64,6 +69,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out;
   color: white;
+  
   
 }
 
@@ -199,19 +205,15 @@
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease;
+  color: #127234;
 }
 
 .linkedinBtn:hover {
   background-color: rgba(234, 214, 34, 0.866); 
   transform: scale(1.1);
-}
-.linkedinBtn a {
-  color: #127234;
+  color: white;
 }
 
-.linkedinBtn a:hover {
-  color: #D9D9D9;
-}
 
 .linkedinIcon {
   color: #127234;
@@ -229,7 +231,7 @@
 .cardDireita {
   flex: 1;
   padding: 20px;
-  background: rgba(40, 80, 50, 0.8);
+  background: rgba(76, 175, 80, 0.2);
   color: white;
   position: relative;
 }
