--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,12 +8,16 @@
   flex-direction: column;
   min-height: 100vh;
 }
+.navbar {
+  padding-bottom: 50px;
+  position: relative;
+}
 
 .hero {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url('/imagens/fundo.png') no-repeat center center/cover;
+  background: url('/imagens/homenvv.png') no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: flex-start;
