--- a/styles/Sobre.module.css
+++ b/styles/Sobre.module.css
@@ -2,24 +2,30 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
 }
 
-
+.mainContent {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  
+}
+.navbar {
+  padding-bottom: 50px;
+  position: relative;
+}
 
 .intro {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 40px;
-  background: rgba(76, 175, 80, 0.1);
+  background: rgba(76, 175, 80, 0.13);
   margin: 60px auto;
-  border-radius: 8px;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  max-width: 2000px;
-  width: 90%;
+  border-radius: 25px;
+  backdrop-filter: blur(4px);
+  max-width: 1900px;
+  width: 80%;
 }
 
 .texto {
@@ -40,15 +46,14 @@
 }
 
 .imagemContainer {
-  width: 40%;
+  height: auto;
 }
 
 .equipeImg {
-  border-radius: 8px;
+  border-radius: 25px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-  width: 100%;
-  height: auto;
-  max-width: 600px; 
+  flex: 2;
+  max-width: 600px; /* Mantém um tamanho proporcional */
 }
 
 .blocos {
@@ -60,11 +65,11 @@
 }
 
 .bloco {
-  background: rgba(76, 175, 80, 0.3);
+  background: rgba(76, 175, 80, 0.5);
   padding: 20px;
   width: 80%;
   max-width: 600px;
-  border-radius: 8px;
+  border-radius: 25px;
   text-align: center;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out;
@@ -79,17 +84,20 @@
 
 .missao {
   align-self: flex-start;
-  margin-left: 15%; 
+  margin-left: 15%;
+  backdrop-filter: blur(4px);
 }
 
 .visao {
   align-self: flex-end;
   margin-right: 15%; 
+  backdrop-filter: blur(4px);
 }
 
 .valores {
   align-self: flex-start;
-  margin-left: 15%; 
+  margin-left: 15%;
+  backdrop-filter: blur(4px);
 }
 
 
@@ -128,6 +136,7 @@
 .equipe {
   padding: 40px 20px;
   text-align: center;
+  font-size: 25px;
 }
 
 .membrosGrid {
@@ -147,6 +156,7 @@
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 25px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
