--- a/styles/NavbarVerde.module.css
+++ b/styles/NavbarVerde.module.css
@@ -37,3 +37,67 @@
     transform: scale(1.2);
   }
   
+
+
+
+  /* Animação do botão quando aberto */
+  .open.bar:nth-child(1) {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+  .open.bar:nth-child(2) {
+    opacity: 0; /* Deve estar visível */
+  }
+  .open.bar:nth-child(3) {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+  
+  /* Responsividade */
+  @media (max-width: 768px) {
+
+
+    .bar {
+     width: 100%;
+    height: 3px;
+    background-color: #127234; 
+    border-radius: 2px;
+    transition: all 0.3s ease;
+    }
+
+    
+    .hamburger {
+      display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 24px;
+    cursor: pointer;
+    z-index: 1000;
+    padding: 5px 0;
+    }
+  
+    .nav {
+      position: absolute;
+      top: 70px;
+      right: 0;
+      background-color: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(8px);
+      width: 100%;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.4s ease-in-out;
+      z-index: 150;
+    }
+  
+    .nav.open {
+      max-height: 300px; 
+    }
+  
+    .nav ul {
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
+      padding: 20px 0;
+    }
+
+    
+  }
