--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ html, body {
   font-family: 'Poppins', sans-serif;
   color: white;
   overflow-x: hidden;
+  min-height: 100vh;
   height: 100%;
   background: black; 
 }
@@ -24,10 +25,10 @@ main {
   flex-grow: 1;
 }
 
-footer {
+/*footer {
   background-color: #2ecc71;
   color: white;
   text-align: center;
   padding: 10px;
   width: 100%;
-}
+}*/
