--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -136,11 +136,11 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    min-height: 100vh; /* 🔹 Altura mínima de toda a página */
+    min-height: 100vh; 
     height: 100vh;
-    width: 100vw; /* 🔹 Mantém a largura total */
+    width: 100vw; 
     background-size: cover;
-    background-position: center; /* 🔹 Centraliza a imagem */
+    background-position: center; 
     background-repeat: no-repeat;
     padding: 0 20px;
     overflow: hidden;
@@ -152,13 +152,13 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin-top: 240px; /* 🔹 Move a imagem 1.png mais para baixo */
+    margin-top: 240px; 
   }
 
   .logo2 {
     max-width: 55%;
     height: auto;
-    margin-bottom: -130px; /* Pequeno espaço entre imagem e botão */
+    margin-bottom: -130px; 
   }
 
   .heroText .btn {
@@ -166,16 +166,16 @@
     height: 45px;
     font-size: 14px;
     padding: 8px 12px;
-    margin-left: 30px; /* 🔹 Mantém alinhado à direita da imagem */
-    margin-top: -10px; /* 🔹 Sobe um pouco o botão */
+    margin-left: 30px; 
+    margin-top: -10px; 
     white-space: nowrap;
   }
 
   .heroText {
     max-width: 90%;
     text-align: left;
-    margin-left: 50px; /* 🔹 Mantém alinhado ao botão */
-    margin-top: 160px; /* 🔹 Sobe um pouco o texto para não encostar no footer */
+    margin-left: 50px; 
+    margin-top: 160px; 
   }
 
   .socialIcons {
@@ -211,11 +211,11 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    min-height: 100vh; /* 🔹 Altura mínima de toda a página */
+    min-height: 100vh; 
     height: 100vh;
-    width: 100vw; /* 🔹 Mantém a largura total */
+    width: 100vw; 
     background-size: fixed;
-    background-position: center; /* 🔹 Centraliza a imagem */
+    background-position: center; 
     background-repeat: no-repeat;
     padding: 0 20px;
     overflow: hidden;
@@ -227,13 +227,13 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin-top: 39%; /* 🔹 Move a imagem 1.png mais para baixo */
+    margin-top: 39%; 
   }
 
   .logo2 {
     max-width: 55%;
     height: auto;
-    margin-bottom: -10%; /* Pequeno espaço entre imagem e botão */
+    margin-bottom: -10%; 
   }
 
   .heroText .btn {
@@ -241,16 +241,16 @@
     height: 45px;
     font-size: 14px;
     padding: 8px 12px;
-    margin-left: 30px; /* 🔹 Mantém alinhado à direita da imagem */
-    margin-top: 10px; /* 🔹 Sobe um pouco o botão */
+    margin-left: 30px; 
+    margin-top: 10px; 
     white-space: nowrap;
   }
 
   .heroText {
     max-width: 90%;
     text-align: left;
-    margin-left: 50px; /* 🔹 Mantém alinhado ao botão */
-    margin-top: 10%; /* 🔹 Sobe um pouco o texto para não encostar no footer */
+    margin-left: 50px; 
+    margin-top: 10%; 
   }
 
   .socialIcons {
