--- a/styles/NavbarVerde.module.css
+++ b/styles/NavbarVerde.module.css
@@ -45,7 +45,7 @@
     transform: rotate(-45deg) translate(-5px, 6px);
   }
   .open.bar:nth-child(2) {
-    opacity: 0; /* Deve estar visível */
+    opacity: 0; 
   }
   .open.bar:nth-child(3) {
     transform: rotate(45deg) translate(-5px, -6px);
