--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   width: 100%;
-  background-color: rgba(217, 217, 217, 0.762);
+  background-color: rgba(217, 217, 217, 0.9);
   color: #166534;
   padding: 30px 50px;
   font-size: 14px;
@@ -42,8 +42,9 @@
   font-weight:500;
 }
 .footertitle {
-  color: #fff;
+  color: #4CAF50;
   font-size: 16px;
+  font-weight: bold;
 }
 
 .footerlinks a,
@@ -62,7 +63,8 @@
 }
 
 .footercontact p {
-    color: #fff;
+    color: #4CAF50;
+    font-weight: bold;
     font-size: 16px;
   }
 
@@ -103,7 +105,7 @@
 
 .footercopyright {
   font-size: 16px;
-  color: #fff;
+  color: #4CAF50;
   text-align: center;
   margin-top: 40px;
 }
@@ -123,7 +125,7 @@
   }
 
   .footerlogo img {
-    width: 120px;
+    width: 150px;
   }
 
   .footerlinks,
@@ -150,11 +152,11 @@
   .footersocial {
     gap: 20px;
     font-size: 16px;
-    margin-top: 5px;
+    margin-top: 1px;
   }
 
   .footersocial a {
-    font-size: 14px;
+    font-size: 18px;
     padding: 8px;
     width: 28px;
     height: 28px;
