--- a/styles/Termos.module.css
+++ b/styles/Termos.module.css
@@ -15,6 +15,7 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   line-height: 1.6;
   font-size: 1rem;
+  text-align: justify;
 }
 
 .titulo {
@@ -32,6 +33,7 @@
   margin-top: 25px;
   font-weight: 600;
   color: #127234;
+  text-align: justify;
 }
 
 .formulario ul {
