--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -108,6 +108,15 @@
   color: #4CAF50;
   text-align: center;
   margin-top: 40px;
+  display: flex;
+  flex-direction: column; /* Added to stack copyright and version */
+  align-items: center; /* Added to center the content */
+}
+
+.footercopyright p { /* Style for the version paragraph */
+  margin-top: 5px;
+  font-size: 0.9rem;
+  color: #777;
 }
 
 
